# Supply-chain-research

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
audit_workspace/: COMPLEXITY_REPORT.json  COVERAGE_BASELINE.txt  COVERAGE_FINAL.txt  COVERAGE_FINAL_FULL.txt  CURRENT_SIGNATURES.json  DELIVERABLES_FINAL.txt  HARDCODED_CANDIDATES.txt  NUMERIC_BASELINE.json  NUMERIC_DIFF_RESULT.txt  NUMERIC_FINAL.json  PASSING_TESTS_BASELINE.txt  PASSING_TESTS_FINAL.txt  PASSING_TESTS_POST_FIX031.txt  PLACEHOLDER_FINAL.txt  SIGNATURE_BASELINE.json  SIGNATURE_DIFF_RESULT.txt  SIGNATURE_DIFF_RESULT_v2.txt  SIGNATURE_FINAL.json  SIGNATURE_FINAL_v2.json  STUB_ALLOWLIST.txt  STUB_CANDIDATES.txt  _check_eqns.tex  _extract_templates.py  _fill_templates.py  _final_passed.txt  _regdiff.sh  _section4_balance_check.py  _validate_latex_tables.py  capture_numeric_baseline.py  capture_signatures.py  check_deliverables.sh  check_docstrings.py  check_emissions_block.py  diff_numeric.py  diff_signatures.py  missing_docstrings.txt
cloud_training/: README_CLOUD_SETUP.md  TRAINING_GUIDE.md  colab_setup.ipynb  kaggle_setup.ipynb  local_training_runner.py  modal_train.py  vastai_setup.sh
data/: README.md
docs/: ADVANCED_RESEARCH_ROADMAP.md  ARCHITECTURE.md  COMPLEXITY_ANALYSIS.md  DATA_SOURCES.md  HEADLINE_NUMBERS.md  HUMAN_INTERFERENCE.md  IMPROVEMENT_REPORT.md  LITERATURE_GAP_ANALYSIS.md  MANAGERIAL_INSIGHTS.md  MATHEMATICAL_FORMULATIONS.md  MENTOR_REPORT.md  PAPER_OUTLINE.md  REPLICATION_GUIDE.md  REPLICATION_RECIPE.md  VERIFIED_REFERENCES.bib  appendix_a_parameters.md  mathematical_formulations.tex
manuscript/: conflict_of_interest.md  cover_letter.md  data_availability.md  main.tex  suggested_reviewers.md  verified_references.bib
scripts/: calibrate_demand.py  fix_docstrings.py  generate_appendix_a.py  ingest_dalal_data.py  lstm_sweep.py  render_fig8_nsga3_projections.py  rerun_nsga3.py  run_cvrplib_benchmark.py  run_delhivery_secondary.py  run_disruption_evaluation.py  (+1 more)
(+184 files in other folders)
