[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "supply-chain-research"
version = "0.1.0"
description = "AI-driven multi-objective supply chain optimization with resilience analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Core scientific computing
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "joblib>=1.3",
    # Networking / HTTP
    "requests>=2.31",
    # Progress / Logging
    "tqdm>=4.65",
    "loguru>=0.7",
    "rich>=13.0",
    # Multi-objective optimization
    "pymoo>=0.6.1",
    "ortools>=9.8",
    # Discrete-event simulation
    "simpy>=4.1",
    # Deep learning
    "torch>=2.0",
    "gymnasium>=1.0",
    "tensorboard>=2.14",
    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Configuration / Validation
    "pydantic>=2.5",
    # Document generation
    "pylatex>=1.4",
    "jinja2>=3.1",
    # Web API
    "fastapi>=0.100",
    # Machine learning
    "scikit-learn>=1.3",
    # Sensitivity analysis
    "SALib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.2",
    "hypothesis>=6.80",
    "mypy>=1.5",
    "ruff>=0.1",
]
webapp = [
    "uvicorn>=0.24",
    "plotly>=5.18",
]
cloud = [
    "modal>=0.60",
]

[tool.setuptools.packages.find]
include = ["supply_chain_research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*"]
python_functions = ["test_*"]
markers = [
    "unit: fast unit tests (<1s each)",
    "integration: cross-module integration tests",
    "slow: tests that take >5s",
    "gpu: tests requiring CUDA",
    "regression: tests against NUMERIC_BASELINE.json",
]
addopts = "--strict-markers -m 'not slow and not gpu' --tb=short"
timeout = 120
